test: add test to cover terms query chunking