@@ -75,8 +75,8 @@ import org.springframework.stereotype.Component;
 @Component
 @Conditional(OpenSearchCondition.class)
 public class VariableStoreOpenSearch implements VariableStore {
-  private static final int DEFAULT_MAX_TERMS_COUNT = 65536;
-  private static final String MAX_TERMS_COUNT_SETTING = "index.max_terms_count";
+  public static final int DEFAULT_MAX_TERMS_COUNT = 65536;
+  public static final String MAX_TERMS_COUNT_SETTING = "index.max_terms_count";
   private static final Logger LOGGER = LoggerFactory.getLogger(VariableStoreOpenSearch.class);
 
   @Autowired
@@ -103,7 +103,7 @@ public class VariableStoreOpenSearch implements VariableStore {
   @PostConstruct
   void scheduleUpdateTermsCount() {
     Executors.newSingleThreadScheduledExecutor()
-        .scheduleAtFixedRate(this::refreshMaxTermsCount, 1, 30, TimeUnit.MINUTES);
+        .scheduleAtFixedRate(this::refreshMaxTermsCount, 30, 1800, TimeUnit.SECONDS);
   }
 
   @Override
@@ -161,17 +161,16 @@ public class VariableStoreOpenSearch implements VariableStore {
   public Map<String, List<SnapshotTaskVariableEntity>> getTaskVariablesPerTaskId(
       final List<GetVariablesRequest> requests) {
 
-    if (requests == null || requests.size() == 0) {
+    if (requests == null || requests.isEmpty()) {
       return new HashMap<>();
     }
     final Query.Builder taskIdsQ = new Query.Builder();
-    final List<String> ids =
-        requests.stream().map(GetVariablesRequest::getTaskId).collect(toList());
+    final List<String> ids = requests.stream().map(GetVariablesRequest::getTaskId).toList();
     taskIdsQ.terms(
         terms ->
             terms
                 .field(SnapshotTaskVariableTemplate.TASK_ID)
-                .terms(t -> t.value(ids.stream().map(m -> FieldValue.of(m)).collect(toList()))));
+                .terms(t -> t.value(ids.stream().map(FieldValue::of).collect(toList()))));
 
     final List<String> varNames =
         requests.stream()
@@ -187,9 +186,7 @@ public class VariableStoreOpenSearch implements VariableStore {
           terms ->
               terms
                   .field(NAME)
-                  .terms(
-                      t ->
-                          t.value(varNames.stream().map(m -> FieldValue.of(m)).collect(toList()))));
+                  .terms(t -> t.value(varNames.stream().map(FieldValue::of).collect(toList()))));
     }
 
     final SearchRequest.Builder searchRequestBuilder = new SearchRequest.Builder();
@@ -386,8 +383,9 @@ public class VariableStoreOpenSearch implements VariableStore {
                       .includeDefaults(true)
                       .name(MAX_TERMS_COUNT_SETTING)
                       .build());
-      maxTermsCount = response.get(variableIndex.getFullQualifiedName()).settings().maxTermsCount();
-    } catch (final IOException | NumberFormatException e) {
+      maxTermsCount =
+          response.get(variableIndex.getFullQualifiedName()).settings().index().maxTermsCount();
+    } catch (final IOException e) {
       LOGGER.warn("Failed to update max_terms_count setting", e);
     }
   }
